tests/baselines/reference/parserTypeQuery9.errors.txt
==== tests/cases/compiler/parserTypeQuery9.ts (1 errors) ====
    var s: typeof A[];
                  ~
!!! parserTypeQuery9.ts(1,15): error TS2095: Cannot find name 'A'.
    